objects/vlocity_ins__ObjectClass__c.object
<CustomObject>
    <description>Represents an object or object type that is used to describe the capabilities of that object or object type to Vlocity services and applications. Object types are based on a parent object and can be based on parent object types forming a class hierarchy.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalGroupKey__c</fullName>
        <label>Version Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this object domain or object type. Used to identify the object domain or object type across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique object domain or object type identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsVirtual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Virtual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LifecycleStatus__c</fullName>
        <label>Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Mode__c</fullName>
        <description>The mode in which Object Type is associated with objects. Object Type Id: the object has a field called ObjectTypeId__c which is a direct lookup to the Object Type record. Record Type: map to a Object Type based on the object&apos;s record type. Field: map to an Object Type based on the value of a specified field on the object.</description>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Object Type Id</fullName>
                </value>
                <value>
                    <fullName>Record Type</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectApiName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentObjectClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object Type</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Vlocity Objects (Parent Object Class)</relationshipLabel>
        <relationshipName>ParentObjectClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootObjectClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Object Class</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipName>VlocityObjectClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionLabel__c</fullName>
        <label>Version Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Object or Object Type</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>vlocity_ins__ObjectApiName__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Vlocity_Objects_ObjectTypes</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__ObjectApiName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__ObjectClass__c.vlocity_ins__Object</value>
        </filters>
        <label>Vlocity Objects</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Vlocity_Objects_ObjectTypes_Product2</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__ObjectApiName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>vlocity_ins__ObjectClass__c.vlocity_ins__Object</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Product2 Object</value>
        </filters>
        <label>Product2 Object</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Objects and Object Types</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Object</fullName>
        <active>true</active>
        <label>Object</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ObjectType</fullName>
        <active>true</active>
        <label>Object Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__EffectiveFrom_Greater_EffectiveUntil</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__EffectiveFromDate__c  &gt;  vlocity_ins__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
</CustomObject>